# basic-notion

./: LICENSE  Makefile  README.md  mypy.ini  pytest.ini  setup.cfg
src/basic_notion/: attr.py  base.py  block.py  data_gen.py  database.py  exc.py  field.py  filter.py  page.py  parent.py  property.py  property_schema.py  query.py  schema.py  sort.py  titled_page.py  utils.py
tests/: conftest.py  models.py  settings.py  test_block.py  test_creation.py  test_data_gen.py  test_database.py  test_field.py  test_page.py  tools.py
