[metadata]
name = basic-notion
version = 0.0.4
author = Grigory Statsenko
author_email = grisha100@gmail.com
description = Client-agnostic model wrapper for Notion API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/altvod/basic-notion
project_urls =
    Bug Tracker = https://github.com/altvod/basic-notion/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    attrs

[options.packages.find]
where = src

[options.extras_require]
develop =
    mypy
build =
    build
    twine
clients =
    notion-client
