[metadata]
name = basic-notion
version = 0.4.1
author = Grigory Statsenko
author_email = grisha100@gmail.com
description = Client-agnostic model wrapper for Notion API
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    notion
    notion-api
    models
url = https://github.com/altvod/basic-notion
project_urls =
    Bug Tracker = https://github.com/altvod/basic-notion/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    attrs

[options.packages.find]
where = src

[options.extras_require]
testing =
    mypy
    pytest
    pytest-envfiles
    notion-client
build =
    build
    twine
